@@ -29,7 +29,7 @@ videofeed.Web,Youtube=http://gdata.youtube.com/feeds/base/standardfeeds/most_rec
 videofeed.Web,Youtube,PS3=http://www.youtube.com/ut_rss?type=username&arg=PlayStation
 videofeed.Web,Youtube,PS3=http://www.youtube.com/ut_rss?type=username&arg=matt9339
 videofeed.Web,Youtube,Playlist=http://gdata.youtube.com/feeds/api/playlists/CAD9116C66720FCC?client=ytapi-youtube-browse
-videofeed.Web,GameTrailers=http://gametrailers.com/rss/top20ps3.xml
+videofeed.Web,GameTrailers=http://gametrailers.com/rss/newestps3.xml
 
 #audio podcasts
 audiofeed.Web,Podcasts=http://podcasts.engadget.com/rss.xml
