@@ -2,6 +2,13 @@
 Changelog:
 ==========
 
+- Fixes:
+
+Regression in FLAC playback
+Flaw in the transcode/remux buffer, in some cases, the video stopped after a few minutes
+Duplicate items issue on Linux
+Upnp alive message sent sooner at the start of the server
+
 v1.10
 
 - Changes / Features : Windows/Linux
